<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UI测试</string>
    <string name="hello_world">UI测试</string>
    <string name="action_settings">UI测试</string>
    <string name="next">下一步</string>
    <string name="signup_setPassword">设置密码</string>
    <string name="signup_checkPassword">确认密码</string>
    <string name="complete">完成</string>
    <string name="signup_text1">我已经阅读并且接受版权声明和隐私保护条款</string>
    <string name="reset_psw2">当前密码:</string>
    <string name="reset_psw1">请输入新密码:</string>
    <string name="check_psw">请确认新密码:</string>
    <string name="show_psw">显示密码</string>
    <string name="fill_phone">请填写手机号码</string>
    <string name="comfirm_change">确认更改</string>
    <string name="modify_passowrd">修改密码</string>
    <string name="net_check">网络诊断</string>
    <string name="setting_text1">喜欢我们？去评分吧</string>
    <string name="about">关于我们</string>
    <string name="setting_text2">通知显示消息详情</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出当前账号</string>
    <string name="createteam_text1">队伍名称:6~20字</string>
    <string name="create_team_text2">基本信息：填写个性需求，队伍介绍，流程，费用等</string>
    <string name="nickName">昵称</string>
    <string name="sex">性别</string>
    <string name="phone">手机号码</string>
    <string name="mysign">个性签名</string>
    <string name="my_address">我的地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="cancel">取消</string>
    <string name="search_text1">搜索商品、活动、地点、帖子</string>
    <string name="hot_search">热门搜索</string>
    <string name="about_version">v5.8.5.4075</string>
    <string name="about_text1">微信公众号:导途吧结伴旅行</string>
  <!--   <string name="about_text2">杭州西沐网络科技有限公司\nHangzhou Ximu Net Technology Co,Ltd</string> -->
    <string name="about_text2">XXXX网络科技有限公司\nHangzhou XXX Net Technology Co,Ltd</string>
    <string name="complaint_text1">请输入投诉该账号的理由</string>
    <string name="complaint_text2">在此输入理由</string>
    <string name="complaint_text3">上传投诉该账号的聊天记录</string>
    <string name="commit_complaint">确定投诉</string>
    <string name="modify_text1">在这里可以设置你在这个群里的昵称。这个昵称只会在此群内显示。</string>
    

    <string name="title_activity_loadin">LoadingActivity</string>
    <string name="title_activity_signUp">注册</string>
    <string name="title_activity_reset_password">重置密码</string>
    <string name="title_activity_change_phone">更改手机号</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_create_team">创建队伍</string>
    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_complaint">投诉</string>
    <string name="title_activity_mysign">个性签名</string>
    <string name="title_activity_modify_nickname">修改昵称</string>
    <string name="title_activity_modify_group">我在本群的昵称</string>
    <string name="title_activity_modify_sex">性别</string>
    <string name="title_activity_group_infomation">群资料</string>
    <string name="title_activity_collection">我的收藏</string>
    <string name="title_activity_team_list">队伍列表</string>
    <string name="title_activity_see_member">查看群成员</string>
    <string name="title_activity_team_infomation">队伍资料</string>
    <string name="title_activity_member_infomation">成员资料</string>
    
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="quick_signup">快速注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="mine">我的</string>
    <string name="country_district">国家/地区</string>
    <string name="districtNum">+86</string>
    <string name="vertifyCode">验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="fee">费用</string>
    <string name="time">时间</string>
    <string name="location">地点</string>
    <string name="gonglue_text1">结伴须知</string>
    <string name="gonglue_text2">旅行必备</string>
    <string name="gonglue_text3">生活家居</string>
    <string name="gonglue_text4">风土人情</string>
    <string name="gonglue_text5">优品速递</string>
    <string name="gonglue_text6">为您寻觅旅途好物</string>
    <string name="out_text1">提交行程</string>
    <string name="out_text2">相关群聊</string>
    <string name="startTime">出发时间：</string>
    <string name="endTiem">结束时间</string>
    <string name="pay">支付</string>
    <string name="add_chats">加入群聊</string>
    <string name="select_pay">请选择支付方式</string>
    <string name="commit_pay">确认支付</string>
    <string name="groupName">群名称</string>
    <string name="group_infomation_text1">省内其他目的地选择</string>
    <string name="groupChat">聊天记录</string>
    <string name="group_disturb">群消息免打扰</string>
    <string name="groupIntroduce">群介绍</string>
    <string name="delete_exit">删除并退出</string>
    <string name="create_team">创建队伍</string>
    <string name="team_infomation">队伍信息</string>
    <string name="team_msg_text1">即时结队</string>
    <string name="rule">规则</string>
    <string name="teamName">队伍名称</string>
    <string name="zhanwei">占位</string>
    <string name="zhanweiE">abc</string>
    <string name="zhanweiN">123</string>
    <string name="plan_fee">预计花费</string>
    <string name="set_top">置顶聊天</string>
    <string name="location1">位置</string>
    <string name="complaint">投诉</string>
    <string name="out_plan">出行计划</string>
    <string name="login_infomation_tip">请先补全登录信息</string>
    <string name="login_failed">登录失败</string>
    <string name="signUp_no_phone_tip">请先填写手机号</string>
    <string name="signUp_infomation_tip">请先补全注册信息</string>
    <string name="signUp_failed">注册失败</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_phone">从手机相册中选择</string>
</resources>
