<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include
        layout="@layout/title" />

    <RelativeLayout
        android:id="@+id/rl_change_phone_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/style_textView_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_district" />

        <TextView
            android:id="@+id/tv_change_phone_district"
            style="@style/style_textView_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textView1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow" />
    </RelativeLayout>

    <View style="@style/style_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_change_phone_phonePrefix"
            style="@style/style_textView_black_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/districtNum" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginLeft="40dp"
            android:background="@color/line_color" />

        <EditText
            android:id="@+id/et_change_phone_phone"
            style="@style/style_editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:hint="@string/fill_phone"
            android:inputType="phone"
            android:lines="1" />

    </LinearLayout>

    <View style="@style/style_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/et_change_phone_code"
            style="@style/style_editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/tv_change_phone_getCode"
            android:drawableLeft="@drawable/code"
            android:drawablePadding="24dp"
            android:hint="@string/vertifyCode" />

        <TextView
            android:id="@+id/tv_change_phone_getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn2"
            android:padding="5dp"
            android:text="@string/getCode"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize6" />

    </RelativeLayout>
    
    <Button
        android:id="@+id/btn_change_phone_commit"
        style="@style/style_button1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:text="@string/comfirm_change" />

</LinearLayout>