<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_psw2"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize6" />

            <EditText
                android:id="@+id/et_reset_password_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/style_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_psw1"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize6" />

            <EditText
                android:id="@+id/et_reset_password_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/style_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_psw"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize6" />

            <EditText
                android:id="@+id/et_reset_password_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/style_line" />

        <CheckBox
            android:id="@+id/cb_reset_password_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_psw"
            android:textSize="@dimen/textSize7" />

        <Button
            android:id="@+id/et_reset_password_commit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn2"
            android:padding="5dp"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize5" />
    </LinearLayout>

</LinearLayout>