<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/iv_dialog_pay_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pay"
            android:textColor="@color/black_translucent_b"
            android:textSize="@dimen/textSize5" />
    </FrameLayout>

    <View style="@style/style_line" />

    <TextView
        android:id="@+id/tv_dialog_pay_payType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/add_chats"
        android:textSize="@dimen/textSize6" />

    <TextView
        android:id="@+id/tv_dialog_pay_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="0.00"
        android:textSize="@dimen/textSize1" />

    <View
        style="@style/style_line"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_pay"
        android:textSize="@dimen/textSize5" />

    <View
        style="@style/style_line"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_dialog_pay_alipayWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:src="@drawable/alipay" />

        <ImageView
            android:id="@+id/iv_dialog_pay_wechatWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wechat" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_dialog_pay_commit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn4"
        android:text="@string/commit_pay"
        android:textColor="@color/white" />

</LinearLayout>